# SKAnalysis

./: .gitignore  AddNoise_8h_source.html  AddTree_8h_source.html  Algorithms_8h_source.html  ApplyTMVA_8h_source.html  ArgParser_8h_source.html  BStore_Linkdef.hh  BuildHist_8h_source.html  CMakeLists.txt  CalculateNeutronCloudVertex_8h_source.html  CalculatePreactivityObservables_8h_source.html  CalculateSpallationVariables_8h_source.html  Calculator_8h_source.html  Candidate_8h_source.html  Cluster_8h_source.html  ColourWheel_8h_source.html  CombinedFitter_8h_source.html  CompareCommons_8h_source.html  CompareRootFiles_8h_source.html  CompareSubtriggers_8h_source.html  Constants_8h_source.html  CopyHits_8h_source.html  CutRecorder_8h_source.html  DataModel_8h_source.html  DataQualityCuts_8h_source.html  DecayElectronCuts_8h_source.html  DefineSignalRegions_8h_source.html  Dockerfile  DummyTool_8h_source.html  EventCandidates_8h_source.html  EventParticles_8h_source.html  EventTrueCaptures_8h_source.html  ExtractFeatures_8h_source.html  Factory_8h_source.html  FindFilesInDirectory_8h_source.html  FitLi9Lifetime_8h_source.html  FitPurewaterLi9NcaptureDt_8h_source.html  FitSpallationDt_8h_source.html  FlagAFTs_8h_source.html  GetSubTrg__SetTimingGate_8h_source.html  (+708 more)
Bonsai/: 00README  GNUmakefile  ariadne.cc  azimuth_ks.cc  binfile.cc  bonsaifit.inline  centroid.inline  combinedgrid.h  distpmt.cc  fit_param.cc  fourhitgrid.cc  goodness.h  goodness.inline  hits.h  hits.inline  hitsel.inline  likelihood.inline  pairlikelihood.cc  pairlikelihood.h  pairlikelihood.inline  sum2dir.cc  timefit.cc
DataModel/: Algorithms.cpp  Algorithms.h  ArgParser.cpp  ArgParser.h  CERNLIB_lowfit_sk4_stripped_README.txt  Calculator.cpp  Calculator.h  Candidate.cpp  Candidate.h  Cluster.cpp  Cluster.h  ColourWheel.cpp  ColourWheel.h  Constants.cpp  Constants.h  DataModel.cpp  DataModel.h  EventCandidates.cpp  EventCandidates.h  EventParticles.cpp  EventParticles.h  (+63 more)
(+990 files in other folders)
